Fixed alignment in moblie view in organizing committe page

--- a/css/style.css
+++ b/css/style.css
@@ -1027,12 +1027,12 @@ body.mobile-nav-active #mobile-nav-toggle {
   #agenda {
     margin: 0 1rem;
     width: 90%;
-    padding: 10% 5% 5% 0; /* Adjusted padding for smaller screens */
+    padding: 5% 0 5% 0; /* Adjusted padding for smaller screens */
   }
   
   .org-img {
-    margin-left: 50px;
-    width: 300px !important; /* Adjusted width for smaller screens */
+    margin: 0 20%;
+    width: 250px !important; /* Adjusted width for smaller screens */
     height: 350px !important; /* Adjusted width for smaller screens */
     max-width: none; /* Removed max-width for smaller screens */
     height: auto; /* Added to maintain aspect ratio */
